# barenode

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  BUILD_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  DECISIONS.md  PLAN.md  README.md  REPORT_CARD.md  ROADMAP.md  facts.txt  package.json  pyproject.toml  test.txt  transcript.md
docs/: 2026-07-11-session.md  2026-07-12-session.md  2026-07-13-session.md  2026-07-14-session.md  2026-07-15-session.md  build-blueprint.md  github-token-guide.md  repo-foundation.md  schema-map.md  workflow-playbook.md  workflow-reflections.md
docs/phases/: 00-foundation.md  01-model.md  02-history.md  03-instructions.md  04-context.md  05-tools.md  06-compaction.md  07-skills.md  08-sandbox.md  09-memory.md  10-planner.md  11-subagents.md  12-verification.md  13-observability.md  14-ui.md
docs/reflections/: 2026-07-11.md  2026-07-12.md  2026-07-13.md  2026-07-14.md  2026-07-15.md
docs/tests/: tests_compare_ch11.py
docs/verification/: CH01-verification.md  CH02-verification.md  CH03-verification.md  CH04-verification.md  CH05-verification.md  CH06-verification.md  CH07-verification.md  CH08-verification.md  CH09-verification.md  CH10-verification.md  CH11-verification.md  CH12-verification.md  CH13-verification.md  (+1 more)
scripts/: intake.sh
src/: main.js  main.py
tests/: conftest.py  main.test.js  test_ch01.py  test_ch02.py  test_ch03.py  test_ch04.py  test_ch05.py  test_ch06.py  test_ch07.py  test_ch08.py  test_ch09.py  test_ch10.py  test_ch11.py  test_ch12.py  test_ch13.py  test_ch14.py  test_compare_CH05.py  test_smoke.py
(+27 files in other folders)
