[project]
name = "barenode"
version = "0.1.0"
description = "Building an AI Agent From Scratch in Python — one primitive at a time"
requires-python = ">=3.11"

[project.scripts]
agent = "src.main:repl"
demo = "src.main:demo"
tui = "src.ui.app:run"
verify = "src.harness.verify:run"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]